Bug 1097762 - part 1 - correctly re-initialize flag histograms after clearing them; r=gfritzsche